# semley

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
inventory/: hosts.ini  localhost.ini
recordings/: host-investigation.txt
scripts/: ci.sh  cluster-down.sh  cluster-up.sh  drive_no_model.py  heal.sh  host-up.sh  inject-fault.sh  telemetry-down.sh  telemetry-up.sh
src/semley/: agent.py  audit.py  cli.py  graph.py  hypotheses.py  mount.py  repl.py  state.py  surfaces.py  tools.py
tests/: test_core.py
