[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11,<0.12" ]

[project]
name = "semley"
version = "0.1.0"
description = """\
  Autonomous SRE investigation agent: a governed state machine driven by a language model, acting through reflected \
  Ansible tools.\
  """
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "apache-burr==0.42",
  "kubernetes>=36.0.2",
  "pydantic-ai-slim[openai]==2.5",
  "python-dotenv>=1",
  "rich>=13.7",
  "rocannon==0.3.2",
  "theodosia==0.8",
]
scripts.semley = "semley.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
]

[tool.uv]
package = true

[tool.ruff]
lint.select = [ "B", "E", "F", "FURB", "I", "UP" ]
lint.ignore = [ "E501" ]  # ruff format owns line length; E501 only fires on unwrappable strings
